# text-to-cw

./: CMakeLists.txt  README.md
include/: version.h.in
src/: text-to-cw.c  text-to-morse.c
